INDUCES routes can be accessed, first model completed

--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -12,24 +12,28 @@
         }
         </style>
 
+    <a href="/designs">Interior Design Styles</a>
+
+    <a href="/mediterranean"><button>View Furniture</button></a>
+
     <h1>Mediterranean Style</h1>
     <p>“Because Mediterranean style homes are often found in warm, seaside locales, colors include sandy neutrals, striking blues, bright whites, and pops of vivid yellow, pink, orange, and green.”</p>
        
     <h2>Mediterranean Dining Room</h2>
-    <a href="/mediterranean"><img src="https://media.architecturaldigest.com/photos/63ffa416783acb3116f11bef/master/w_960,c_limit/Jeff_Andrews_Detroit_06.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa416783acb3116f11bef/master/w_960,c_limit/Jeff_Andrews_Detroit_06.JPG"></a>
 
     <h2>Mediterranean Bedroom</h2>
-    <a href="/ideas"><img src="https://media.architecturaldigest.com/photos/63ffa3c9f734f7efa4203419/master/w_960,c_limit/Lucas_Old%20Las%20Palmas%2019.jpg"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa3c9f734f7efa4203419/master/w_960,c_limit/Lucas_Old%20Las%20Palmas%2019.jpg"></a>
 
 
     <h2>Mediterranean Bathroom</h2>
-    <a href="/designs"><img src="https://media.architecturaldigest.com/photos/63ffa28521b80480822a325c/master/w_960,c_limit/Jeff_Andrews_Detroit_19.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa28521b80480822a325c/master/w_960,c_limit/Jeff_Andrews_Detroit_19.JPG"></a>
 
     <h2>Mediterranean living Room</h2>
-    <a href="/designs"><img src="https://media.architecturaldigest.com/photos/63ffa46a8c1afa56f5e3d6d8/master/w_960,c_limit/Jeff_Andrews_Detroit_01.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa46a8c1afa56f5e3d6d8/master/w_960,c_limit/Jeff_Andrews_Detroit_01.JPG"></a>
 
     <h2>Mediterranean Fireplace</h2>
-    <a href="/designs"><img src="https://media.architecturaldigest.com/photos/63ffa2c0b6d2e827c343925d/master/w_960,c_limit/Jeff_Andrews_Detroit_12.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa2c0b6d2e827c343925d/master/w_960,c_limit/Jeff_Andrews_Detroit_12.JPG"></a>
 
 </body>
 </html>
