Second model and routes created & working

--- a/ID_Studio_2/views/mediterraneanStyle/new.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/new.ejs
@@ -13,7 +13,7 @@
 
             Title: <input type="text" name="title" /><br/>
             Store: <input type="text" name="store" /><br/>
-            <!-- Image: <input type="text" name="image" /><br/> -->
+            Image: <input type="text" name="image" /><br/> 
             Description: <input type="text" name="description" /><br/>
                          <!-- <input type="color" name="description" /><br/> -->
             Price: <input type="text" name="price" /><br/>
@@ -22,5 +22,7 @@
             <input type="submit" name="" value="Confirm"/>
         </form>
 
+        <a href="/mediterranean">Back to Decor Ideas</a>
+        
     </body>
 </html>
