--- a/ID_Studio_2/views/mediterraneanStyle/index.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/index.ejs
@@ -41,13 +41,13 @@
                 <p <%=mediterraneans[i].id; %>><%=mediterraneans[i].description; %></p>
                 <a href="/mediterranean/<%=mediterraneans[i].id;%>"><img src="<%=mediterraneans[i].image;%>"></a>
             
-                <form action="/mediterranean/<%=mediterraneans[i].id%>?_method=DELETE" method="POST">
+                <!-- <form action="/mediterranean/<%=mediterraneans[i].id%>?_method=DELETE" method="POST">
                     <input type="submit" value="Delete">
                 </form> 
 
                 <form action="/mediterranean/<%=mediterraneans[i]._id%>/edit">
                    <input type="submit" value="Edit">
-                </form> 
+                </form>  -->
             </li>
         <% } %>
     </ul>
