Added products to all models

--- a/ID_Studio_2/views/index.ejs
+++ b/ID_Studio_2/views/index.ejs
@@ -19,12 +19,12 @@
 
     <h2>Minimalist Style</h2>
     <p>Spaces that fall within a minimalist design aesthetic are typically defined by clean lines, limited ornamentation, a neutral color scheme, and natural materials. And although this may be an accurate way to describe our contemporary understanding of minimalist house design, there is much more to it than just this.</p>
-    <a href="/designs/minProjects"><img src="https://media.architecturaldigest.com/photos/62daba0f253de26e1119ecac/master/w_960,c_limit/Minimalist-MaxBurkhalter.jpeg"></a>
+    <a href="/designs/minProjects"><img src="https://margaritabravo.com/wp-content/uploads/2022/09/Open-Minimalist-LivingRoom-766x1024.jpeg"></a>
 
 
     <h2>Industrial Style</h2>
     <p>A trend born out of necessity in the 1960s that still thrives today. Brick walls, pipes, and steel structures are left exposed to deliberately contribute to a dramatic effect</p>
-    <a href="/designs/inProjects"><img src="https://media.architecturaldigest.com/photos/62dffb3df9ce2b97293b6269/master/w_960,c_limit/Industrial-Nick%20Glimenakis.jpeg"></a>
+    <a href="/designs/inProjects"><img src="http://cdn.home-designing.com/wp-content/uploads/2018/06/vintage-industrial-bathroom.jpg"></a>
 
 </body>
 </html>
