--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -35,5 +35,7 @@
     <h2>Mediterranean Fireplace</h2>
     <img src="https://media.architecturaldigest.com/photos/63ffa2c0b6d2e827c343925d/master/w_960,c_limit/Jeff_Andrews_Detroit_12.JPG"></a>
 
+    <a href="/designs/mediProjects">TOP</a>
+
 </body>
 </html>
