--- a/ID_Studio_2/views/index2.ejs
+++ b/ID_Studio_2/views/index2.ejs
@@ -44,6 +44,7 @@
     <img src="http://cdn.home-designing.com/wp-content/uploads/2018/06/industrial-style-bathroom-sinks.jpg"></a>
     <img src="http://cdn.home-designing.com/wp-content/uploads/2018/06/vintage-industrial-bathroom.jpg"></a>
 
+    <a href="/designs/inProjects">TOP</a>
 
 </body>
 </html>
