--- a/ID_Studio_2/views/index3.ejs
+++ b/ID_Studio_2/views/index3.ejs
@@ -48,6 +48,7 @@
     <img src="http://cdn.home-designing.com/wp-content/uploads/2018/01/contemporary-minimalist-bathrooms.jpg"></a>
     <img src="http://cdn.shopify.com/s/files/1/0249/0286/0888/articles/Minimalist-Bathroom-2.jpg?v=1579168889"></a>
 
+    <a href="/designs/minProjects">TOP</a>
 
 </body>
 </html>
