--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -3,39 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Interior Design Studio</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <style type="text/css">
-        img{
-            height: 800px;
-            height: 800px;
-        }
-        </style>
 
-    <a href="/designs">Interior Design Styles</a>
-
-    <a href="/mediterranean"><button>View Furniture</button></a>
 
     <h1>Mediterranean Style</h1>
-    <p>“Because Mediterranean style homes are often found in warm, seaside locales, colors include sandy neutrals, striking blues, bright whites, and pops of vivid yellow, pink, orange, and green.”</p>
-       
+    <p class="medT">“Because Mediterranean style homes are often found in warm, seaside locales, colors include sandy neutrals, striking blues, bright whites, and pops of vivid yellow, pink, orange, and green.”</p>
+
+ <div class="container1" >
+<div class="collage">
+        
+    <div class="img-collage"> 
     <h2>Mediterranean Dining Room</h2>
-    <img src="https://media.architecturaldigest.com/photos/63ffa416783acb3116f11bef/master/w_960,c_limit/Jeff_Andrews_Detroit_06.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa416783acb3116f11bef/master/w_960,c_limit/Jeff_Andrews_Detroit_06.JPG" id="imgs">
+    </div> 
 
+    <div class="img-collage"> 
     <h2>Mediterranean Bedroom</h2>
-    <img src="https://media.architecturaldigest.com/photos/63ffa3c9f734f7efa4203419/master/w_960,c_limit/Lucas_Old%20Las%20Palmas%2019.jpg"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa3c9f734f7efa4203419/master/w_960,c_limit/Lucas_Old%20Las%20Palmas%2019.jpg" id="imgs">
+   </div>
 
+</div>
 
+<div class="collage1">
+
+    <div class="img-collage1"> 
     <h2>Mediterranean Bathroom</h2>
-    <img src="https://media.architecturaldigest.com/photos/63ffa28521b80480822a325c/master/w_960,c_limit/Jeff_Andrews_Detroit_19.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa28521b80480822a325c/master/w_960,c_limit/Jeff_Andrews_Detroit_19.JPG"id="imgs">
+    </div>
 
+    <div class="img-collage1">
     <h2>Mediterranean living Room</h2>
-    <img src="https://media.architecturaldigest.com/photos/63ffa46a8c1afa56f5e3d6d8/master/w_960,c_limit/Jeff_Andrews_Detroit_01.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa46a8c1afa56f5e3d6d8/master/w_960,c_limit/Jeff_Andrews_Detroit_01.JPG"id="imgs">
+     </div>
+</div>
 
+    <!-- <div class="img-collage"> --> -->
     <h2>Mediterranean Fireplace</h2>
-    <img src="https://media.architecturaldigest.com/photos/63ffa2c0b6d2e827c343925d/master/w_960,c_limit/Jeff_Andrews_Detroit_12.JPG"></a>
+    <img src="https://media.architecturaldigest.com/photos/63ffa2c0b6d2e827c343925d/master/w_960,c_limit/Jeff_Andrews_Detroit_12.JPG"id="imgs">
+    <!-- </div> -->
 
-    <a href="/designs/mediProjects">TOP</a>
+</div>  
 
+    <a href="/mediterranean"><button>View Furniture</button></a>
+    <a href="/designs/mediProjects"><button class="top">TOP</button></a>
+
+<footer>
+    <nav>
+        <a id="link" href="/designs">Browse Interior Design Styles</a>
+    </nav>
+    <h3>Follow Us:</h3>
+   <img src="https://thenounproject.com/api/private/icons/1261644/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABkEmV-ip_Iiu4ruPndwOHUBch_kHd378xz2ElwySvIBRTBYuP0L5uR51tJFltM2I-HHicEHqzyKAQPopB_vVVCG4VXqw%3D%3D" id="social">
+   <img src="https://thenounproject.com/api/private/icons/5354924/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABkEmV-ip_Iiu4ruPndwOHUBch_kHd378xz2ElwySvIBRTBYuP0L5uR51tJFltM2I-HHicEHqzyKAQPopB_vVVCG4VXqw%3D%3D" id="social">
+   <img src="https://thenounproject.com/api/private/icons/11288/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABkEmV-ip_Iiu4ruPndwOHUBch_kHd378xz2ElwySvIBRTBYuP0L5uR51tJFltM2I-HHicEHqzyKAQPopB_vVVCG4VXqw%3D%3D" id="social">
+</footer>
 </body>
 </html>
