--- a/ID_Studio_2/views/industrialStyle/index.ejs
+++ b/ID_Studio_2/views/industrialStyle/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Interior Design Studio</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
+
 <body>
     <style type="text/css">
         img{
@@ -48,7 +48,8 @@
 
     <a href="/industrial">TOP</a>
 
-
+ <!-- ============ FOOTER ============ -->
+ <%- include ('../partials/footer.ejs') %>
 
 </body>
 </html>
