--- a/ID_Studio_2/views/industrialStyle/show.ejs
+++ b/ID_Studio_2/views/industrialStyle/show.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Show Page</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
 <body>
 
     <h1><%= industrial.title %></h1>
@@ -34,7 +32,8 @@
 
     <a href="/designs/inProjects">Back to Industrial Design Style></a>
 
-<!--    
-    <input type="button" id="add" value="Add to your Studio Page"/> -->
+ <!-- ============ FOOTER ============ -->
+ <%- include ('../partials/footer.ejs') %>
+ 
 </body>
 </html>
