--- a/ID_Studio_2/views/mediterraneanStyle/show.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/show.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Show Page</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
 <body>
 
     <h1><%= mediterranean.title %></h1>
@@ -35,7 +33,8 @@
 
     <a href="/designs/mediProjects">Back to Mediterranean Style></a>
 
-<!--    
-    <input type="button" id="add" value="Add to your Studio Page"/> -->
+   <!-- ============ FOOTER ============ -->
+   <%- include ('../partials/footer.ejs') %>
+   
 </body>
 </html>
