--- a/ID_Studio_2/views/minimalistStyle/index.ejs
+++ b/ID_Studio_2/views/minimalistStyle/index.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Interior Design Studio</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %> 
+
 <body>
     <style type="text/css">
         img{
@@ -47,6 +45,9 @@
 
     <a href="/minimalist/new">Add New Product to Studio</a>
     <a href="/minimalist">TOP</a>
+
+     <!-- ============ FOOTER ============ -->
+     <%- include ('../partials/footer.ejs') %>
 
 </body>
 </html>
