--- a/ID_Studio_2/views/minimalistStyle/show.ejs
+++ b/ID_Studio_2/views/minimalistStyle/show.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Minimalist Show Page</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %> 
+
 <body>
 
         
@@ -34,6 +32,9 @@
     <a href="/minimalist">Back to Decor Ideas</a>
 
     <a href="/designs/minProjects">Back to Minimalism Design Style</a>
-
+    
+ <!-- ============ FOOTER ============ -->
+    <%- include ('../partials/footer.ejs') %>
+    
 </body>
 </html>
