--- a/ID_Studio_2/views/industrialStyle/edit.ejs
+++ b/ID_Studio_2/views/industrialStyle/edit.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
 <body>
 
     <h1>Edit Product</h1>
@@ -20,5 +18,8 @@
 
     <a href="/mediterranean/">Back to Furniture</a>
 
+     <!-- ============ FOOTER ============ -->
+     <%- include ('../partials/footer.ejs') %>
+     
 </body>
 </html>
