--- a/ID_Studio_2/views/industrialStyle/new.ejs
+++ b/ID_Studio_2/views/industrialStyle/new.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
     <body>
         <h1>Add New Furniture</h1>
         <form action="/industrial" method="POST">
@@ -22,5 +20,8 @@
 
     <a href="/industrial">Back to Decor Ideas</a>
 
+     <!-- ============ FOOTER ============ -->
+     <%- include ('../partials/footer.ejs') %>
+     
     </body>
 </html>
