--- a/ID_Studio_2/views/mediterraneanStyle/index.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/index.ejs
@@ -1,10 +1,8 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Interior Design Studio</title>
-</head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
 <body>
     <style type="text/css">
         img{
@@ -56,8 +54,8 @@
 
     <a href="/mediterranean">TOP</a>
 
-
-
+   <!-- ============ FOOTER ============ -->
+   <%- include ('../partials/footer.ejs') %>
 
 </body>
 </html>
