--- a/ID_Studio_2/views/mediterraneanStyle/new.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/new.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %>  
+
     <body>
         <h1>Add New Furniture</h1>
         <form action="/mediterranean" method="POST">
@@ -23,6 +21,9 @@
         </form>
 
         <a href="/mediterranean">Back to Decor Ideas</a>
+
+     <!-- ============ FOOTER ============ -->
+     <%- include ('../partials/footer.ejs') %>
         
     </body>
 </html>
