--- a/ID_Studio_2/views/minimalistStyle/edit.ejs
+++ b/ID_Studio_2/views/minimalistStyle/edit.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Product: Minimalist</title>
-</head>
+  <!-- ============ HEADER ============ -->
+    <%- include ('../partials/header.ejs') %>  
+
 <body>
 
     <h1>Edit Product</h1>
@@ -19,6 +17,9 @@
 
 
     <a href="/minimalist/">Back to Furniture</a>
+
+     <!-- ============ FOOTER ============ -->
+     <%- include ('../partials/footer.ejs') %>
 
 </body>
 </html>
