--- a/ID_Studio_2/views/minimalistStyle/new.ejs
+++ b/ID_Studio_2/views/minimalistStyle/new.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
+  <!-- ============ HEADER ============ -->
+  <%- include ('../partials/header.ejs') %> 
+
     <body>
         <h1>Add New Furniture</h1>
         <form action="/minimalist" method="POST">
@@ -20,6 +18,8 @@
         </form>
 
         <a href="/minimalist">Back to Minimalist Decor Ideas</a>
+         <!-- ============ FOOTER ============ -->
+    <%- include ('../partials/footer.ejs') %>
         
     </body>
 </html>
