Added more styling, made a few edits

--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
    <!-- ============ HEADER ============ -->
-   <header>
     <%- include ('./partials/header.ejs') %>  
-  </header>
+    <nav>
+      <a id="link" href="/designs">Browse Interior Design Styles</a>
+  </nav>
 
 <body>
     <h1>Mediterranean Style</h1>
