--- a/ID_Studio_2/views/index3.ejs
+++ b/ID_Studio_2/views/index3.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
    <!-- ============ HEADER ============ -->
     <%- include ('./partials/header.ejs') %>  
-
+    <nav>
+      <a id="link" href="/designs">Browse Interior Design Styles</a>
+  </nav>
+  
 <body>
 
     <h1>Minimalist Style</h1>
