--- a/ID_Studio_2/public/style.css
+++ b/ID_Studio_2/public/style.css
@@ -1,5 +1,8 @@
 
 /* INDEX PAGE STYLING  */
+/* body {
+    background-color: #fffafa;
+  } */
 
 img {
     border-radius: 10px;
@@ -176,17 +179,8 @@ background-color:  #fffcf5;
   }
 
 button.top {
-    background-color: black;
-  border-radius: 10px;
-  box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
-  color:white;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 1em;
-  height: 40px;
-  padding: 0 25px;
-  transition: all 200ms;
-  margin-top: -40px;
+    position: absolute;
+  margin-top: 25px;
   margin-left: 50px;
   }
   
@@ -205,13 +199,40 @@ a#link {
     font-weight: lighter;
     text-decoration: none;
     background-color: #fffcf5;
-    margin: 50px;
     margin-left: 35px;
-    padding: 5px;
+    margin-top: -35px;
+    padding: 1px;
     color: black;
+    position: absolute;
   }
 
-a#link:hover {
+  a#linkIn {
+    font-size: 20px;
+    color: black;
+    font-weight: lighter;
+    text-decoration: none;
+    background-color: #fffcf5;
+    margin-left: 35px;
+    margin-top: 25px;
+    padding: 1px;
+    color: black;
+    position: absolute;
+  }
+
+  a#link1 {
+    font-size: 20px;
+    color: black;
+    font-weight: lighter;
+    text-decoration: none;
+    background-color: #fffcf5;
+    margin: 20px;
+    padding: 5px;
+    color: black;
+    display: flex;
+    float: right;
+  }
+
+a#link:hover, a#link4:hover, a#link1:hover, a#link2:hover, a#linkIn:hover{
     color:white;
     background-color: black;
 }
@@ -219,9 +240,10 @@ a#link:hover {
 footer {
     margin-top: 25px;
     background-color:#fffcf5 ;
+    height: 200px;
 }
 
-h3{
+h3 {
     align-items:  center;
     text-align: center
 }
@@ -267,3 +289,179 @@ img#imgs3 {
     width: 900px;
 }
 
+/* PRODUCTS INDEX PAGE STYLING  */
+
+ul {
+    display: flex;
+}
+
+.container4 {
+    margin: 10px;
+    margin-left: 40px;
+}
+
+
+img#imgs4, img#imgs5 {
+    height: 400px;
+    width: 400px;
+}
+
+a.product {
+    font-size: 18px;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    margin-top: 10px;
+}
+
+
+.container4:hover img#imgs4 {
+    opacity: 0.3;    
+}
+
+.prodInf {
+    font-size: 18px;
+    text-align: start;
+    margin-left: 90px;
+}
+
+
+  img#imgs5 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+  }
+
+  .prodTitle {
+    font-size: 25px;
+    color: black;
+    text-align: start;
+    margin-left: 740px;
+    word-wrap: break-word;
+    width: 400px;
+    margin-top: 0px;
+  }
+
+  .prodInfo {
+    font-size: 20px;
+    color: black;
+    text-align: start;
+    margin-left: 760px;
+    word-wrap: break-word;
+    width: 400px;
+    font-weight: lighter;
+    margin-top: -10px;
+  }
+
+
+ 
+
+  input[type=submit] {
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
+    color:white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1em;
+    height: 40px;
+    padding: 0 25px;
+    transition: all 200ms;
+    /* margin-top: 10px; */
+    top: -220px; 
+    margin-left: 30px;
+    position: relative;
+  }
+
+  input#edit {
+    position: relative;
+    top: -460px;
+    margin-left: 1750px;
+  }
+
+  input#add {
+    position: absolute;
+    margin-left: 100px;
+    top: 730px;
+    font-size: 18px;
+  }
+
+  input#submitEd {
+    position: relative;
+    top: 2px;
+    font-size: 15px;
+    height: 28px;
+    margin-left: 120px;
+    
+  }
+
+input[type=submit]:hover {
+    color: black;
+    background-color:  #fffcf5;
+      transform: scale(1.05);
+      }
+    
+a#link2 {
+        font-size: 20px;
+        color: black;
+        font-weight: lighter;
+        text-decoration: none;
+        background-color: #fffcf5;
+        margin-top: 150px;
+        margin-left: 800px;
+        padding: 5px;
+        color: black;
+        position: absolute;
+}
+
+
+.prodTitle1 {
+    font-size: 25px;
+    color: black;
+    text-align: start;
+    margin-left: 760px;
+    word-wrap: break-word;
+    width: 400px;
+    margin-top: 0px;
+  }
+
+input.box {
+    margin-left: 40px;
+    display: inline-block;
+    width: 250px;
+    text-align: right;
+}
+
+input.box1 {
+    width: 240px;
+}
+
+input.box2 {
+    width: 240px;
+    margin-left: 40px;
+}
+
+input.box3 {
+    width: 240px;
+    margin-left: 115px;
+}
+
+
+form {
+    margin-top: 200px;
+}
+
+    
+a#link4 {
+    font-size: 20px;
+    color: black;
+    font-weight: lighter;
+    text-decoration: none;
+    background-color: #fffcf5;
+    margin-top: 30px;
+    margin-left: 1700px;
+    padding: 5px;
+    color: black;
+    position: absolute;
+}
