--- a/ID_Studio_2/views/industrialStyle/index.ejs
+++ b/ID_Studio_2/views/industrialStyle/index.ejs
@@ -3,50 +3,33 @@
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %>  
 
+  <a id="link" href="/designs/inProjects">Back to Industrial Design Style</a>
 
 <body>
-    <style type="text/css">
-        img{
-            height: 800px;
-            height: 800px;
-        }
-        </style>
-        
-
-    <a href="/designs">Interior Design Styles</a>
     
     <h1>Industrial Furniture</h1>
     
-    <p> A trend born out of necessity in the 1960s that still thrives today.  <br>
-        Brick walls, pipes, and steel structures are left exposed to deliberately contribute to a dramatic effect. <br>
-        Patinated wood, weathered leather, and rough concrete create a relaxed, worn-in look with a masculine edge. <br>
-        If you don’t want to forgo comfort, you can tweak things with pelts and colored velvet cushions in dark shades of rust, green, or blue.<br>
-        For splashes of color, add no-fuss plants such as cacti, colorful glassware, or an old Persian rug or tin signs from flea market visits. <br> 
+    <p class="prodInf"> A trend born out of necessity in the 1960s that still thrives today.  <br>
+        * Brick walls, pipes, and steel structures are left exposed to deliberately contribute to a dramatic effect. <br>
+        * Patinated wood, weathered leather, and rough concrete create a relaxed, worn-in look with a masculine edge. <br>
+        * If you don’t want to forgo comfort, you can tweak things with pelts and colored velvet cushions in dark shades of rust, green, or blue.<br>
+        * For splashes of color, add no-fuss plants such as cacti, colorful glassware, or an old Persian rug or tin signs from flea market visits. <br> 
     </p>
    
     <ul>
         <% for(let i=0; i < industrials.length; i++) { %>
-            <li>
-                
-                <a href="/industrial/<%=industrials[i].id; %>">
+    <div class="container4" >
+        <div class="img-collage4">
+                <a href="/industrial/<%=industrials[i].id;%>"><img src="<%=industrials[i].image;%>"id="imgs4"></a>
+                <a class="product" href="/industrial/<%=industrials[i].id; %>">
                     <%=industrials[i].title;%></a><br>
-                <p <%=industrials[i].id; %>><%=industrials[i].description; %></p>
-                <a href="/industrial/<%=industrials[i].id;%>"><img src="<%=industrials[i].image;%>"></a>
-            
-                <!-- <form action="/industrial/<%=industrials[i].id%>?_method=DELETE" method="POST">
-                    <input type="submit" value="Delete">
-                </form>  -->
-
-                <!-- <form action="/industrial/<%=industrials[i]._id%>/edit">
-                   <input type="submit" value="Edit">
-                </form>  -->
-            </li>
+         </div>
+    </div>  
         <% } %>
     </ul>
 
-    <a href="/industrial/new">Add Product</a>
+    <a href="/industrial/new"><button>Add Product</button></a>
 
-    <a href="/industrial">TOP</a>
 
  <!-- ============ FOOTER ============ -->
  <%- include ('../partials/footer.ejs') %>
