--- a/ID_Studio_2/views/industrialStyle/new.ejs
+++ b/ID_Studio_2/views/industrialStyle/new.ejs
@@ -2,26 +2,29 @@
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %>  
 
+  <style type="text/css">
+    body {
+      background-image: url("https://images.pexels.com/photos/4207788/pexels-photo-4207788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+      background-size: cover;
+    }
+    </style>
+
     <body>
         <h1>Add New Furniture</h1>
         <form action="/industrial" method="POST">
 
-            Title: <input type="text" name="title" /><br/>
-            Store: <input type="text" name="store" /><br/>
-            Image: <input type="text" name="image" /><br/> 
-            Description: <input type="text" name="description" /><br/>
-                         <!-- <input type="color" name="description" /><br/> -->
-            Price: <input type="text" name="price" /><br/>
-            Tags:  <input type="text" name="tags" /><br/>
-            Link: <input type="text" name="link" /><br/>
-            <input type="submit" name="" value="Confirm"/>
+            <h3 class="prodTitle1"> Title: <input  class="box" type="text" name="title" placeholder="i.e. Dining Table"/><br/>
+            <h3 class="prodTitle1"> Store: <input  class="box" type="text" name="store" placeholder="i.e. Ikea" /><br/>
+            <h3 class="prodTitle1"> Image: <input  class="box2" type="text" name="image" placeholder="i.e. http://cdn.home-designing.com/.jpg"/><br/> 
+            <h3 class="prodTitle1">  Description: <input  class="box1" type="text" name="description" placeholder="i.e. Round, micro-thin glass features subtly tapered sham"/><br/>
+            <h3 class="prodTitle1"> Price: <input  class="box" type="text" name="price" placeholder="i.e. 2999"/><br/>
+            <h3 class="prodTitle1"> Tags:  <input  class="box" type="text" name="tags" placeholder="i.e. mediterranean"/><br/>
+            <h3 class="prodTitle1"> Link: <input  class="box" type="text" name="link" placeholder="link to store"/><br/>
+            <input id="add" type="submit" name="" value="Add new Product"/>
         </form>
 
 
-    <a href="/industrial">Back to Decor Ideas</a>
-
-     <!-- ============ FOOTER ============ -->
-     <%- include ('../partials/footer.ejs') %>
+    <a id="link2" href="/industrial">Back to Decor Ideas</a>
      
     </body>
 </html>
