--- a/ID_Studio_2/views/mediterraneanStyle/index.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/index.ejs
@@ -4,19 +4,10 @@
   <%- include ('../partials/header.ejs') %>  
 
 <body>
-    <style type="text/css">
-        img{
-            height: 800px;
-            height: 800px;
-        }
-        </style>
-        
-
-    <a href="/designs">Interior Design Styles</a>
-    
+    <a id="link" href="/designs/mediProjects">Back to Mediterranean Style</a>
     <h1>Mediterranean Furniture</h1>
     
-    <p>Though not exhaustive, many Mediterranean-style homes will make use of the following design motifs: <br>
+    <p  class="prodInf">Though not exhaustive, many Mediterranean-style homes will make use of the following design motifs: <br>
         * Textured walls, often stucco on the exterior with plaster walls or stone walls on the interior <br>
         * Red terra-cotta roofs <br>
         * Archways <br>
@@ -30,29 +21,25 @@
     </p>
 
 
+
     <ul>
         <% for(let i=0; i < mediterraneans.length; i++) { %>
-            <li>
-                
-                <a href="/mediterranean/<%=mediterraneans[i].id; %>">
-                    <%=mediterraneans[i].title;%></a><br>
-                <p <%=mediterraneans[i].id; %>><%=mediterraneans[i].description; %></p>
-                <a href="/mediterranean/<%=mediterraneans[i].id;%>"><img src="<%=mediterraneans[i].image;%>"></a>
-            
-                <!-- <form action="/mediterranean/<%=mediterraneans[i].id%>?_method=DELETE" method="POST">
-                    <input type="submit" value="Delete">
-                </form> 
 
-                <form action="/mediterranean/<%=mediterraneans[i]._id%>/edit">
-                   <input type="submit" value="Edit">
-                </form>  -->
-            </li>
+    <div class="container4" >
+    <div class="img-collage4">
+              
+        <!-- <li> -->
+                <!-- <p class="medT" <%=mediterraneans[i].id; %>><%=mediterraneans[i].description; %></p>  -->
+                <a href="/mediterranean/<%=mediterraneans[i].id;%>"><img src="<%=mediterraneans[i].image;%> "id="imgs4"></a> 
+                <a class="product" href="/mediterranean/<%=mediterraneans[i].id; %>"> 
+                    <%=mediterraneans[i].title;%></a><br>
+    </div>
+    </div>
         <% } %>
     </ul>
 
-    <a href="/mediterranean/new">Add Product</a>
+    <a href="/mediterranean/new"><button>Add Product</button></a>
 
-    <a href="/mediterranean">TOP</a>
 
    <!-- ============ FOOTER ============ -->
    <%- include ('../partials/footer.ejs') %>
