--- a/ID_Studio_2/views/mediterraneanStyle/show.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/show.ejs
@@ -10,7 +10,7 @@
     </style>
 
 <body>
-  <a id="link" href="/mediterranean">Back to Decor Ideas</a>
+  <a id="link" href="/mediterranean">Back to Products</a>
 
 <div class="container5" >
     <h1><%= mediterranean.title %></h1>
