--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -46,7 +46,7 @@
 </div>  
 
     <a href="/mediterranean"><button>View Furniture</button></a>
-    <a href="/designs/mediProjects"><button class="top">TOP</button></a>
+    <a href="/designs/mediProjects"><button class="top-bttn">TOP</button></a>
 
   <!-- ============ FOOTER ============ -->
   <%- include ('./partials/footer.ejs') %>
