--- a/ID_Studio_2/views/index2.ejs
+++ b/ID_Studio_2/views/index2.ejs
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
    <!-- ============ HEADER ============ -->
     <%- include ('./partials/header.ejs') %>  
-    <nav>
-        <a id="link" href="/designs">Browse Interior Design Styles</a>
-    </nav>
 
 <body>
 
-    <h1>Industrial Style</h1>
+    <h1 class="category-title">Industrial Style</h1>
     <p class="medT">The most casual of all interior design styles is the industrial look, a trend born out of necessity in the 1960s that still thrives today.</p>
 
     <div class="container2" >
     <div class="collage2">
+        <a href="/industrial"><button class="viewbttn">View Furniture</button></a>
 
     <div class="img-collage2"> 
     <h2>Industrial Kitchens</h2>
@@ -42,8 +40,7 @@
     </div>
 </div>
 
-    <a href="/industrial"><button>View Furniture</button></a>
-    <a href="/designs/inProjects"><button class="top">TOP</button></a>
+    <a href="/designs/inProjects"><button class="top-bttn">TOP</button></a>
 
 
       <!-- ============ FOOTER ============ -->
