--- a/ID_Studio_2/views/partials/footer.ejs
+++ b/ID_Studio_2/views/partials/footer.ejs
@@ -1,9 +1,14 @@
 <footer>
     <nav>
-        <a id="linkIn" href="/designs">Browse Interior Design Styles</a>
+        <a id="linkIn" href="/designs">Back to Interior Design Styles</a>
     </nav>
-    <h3>Follow Us:</h3>
+    
+    <div class="footer-container">
+    <h3 class="footer-title">Follow Us:</h3>
+    <div class="footer-content">
     <img src="https://cdn3.iconfinder.com/data/icons/social-media-black-white-2/512/BW_Pinterest_glyph_svg-128.png" id="social">
        <img src="https://cdn3.iconfinder.com/data/icons/social-media-black-white-2/512/BW_Twitter_glyph_svg-128.png" id="social">
        <img src="https://cdn3.iconfinder.com/data/icons/social-media-black-white-2/512/BW_Youtube_glyph_svg-128.png" id="social">
+    </div>
+    </div>
 </footer>
