--- a/ID_Studio_2/views/index3.ejs
+++ b/ID_Studio_2/views/index3.ejs
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
    <!-- ============ HEADER ============ -->
     <%- include ('./partials/header.ejs') %>  
-    <nav>
-      <a id="link" href="/designs">Browse Interior Design Styles</a>
-  </nav>
-  
+   
 <body>
 
-    <h1>Minimalist Style</h1>
+    <h1 class="category-title">Minimalist Style</h1>
     <p class="medT">Though often imagined as an uncluttered room with a monochromatic color palette and a few pieces of furniture, minimalism encompasses much more than just a finished aesthetic, especially when you consider how different cultures honor the ethos in their spaces.</p>
        
     <div class="container3" >
     <div class="collage3">
+      <a href="/minimalist"><button  class="viewbttn">View Furniture</button></a>
 
     <div class="img-collage3"> 
     <h2>Minimalist Kitchen Ideas</h2>
@@ -49,8 +47,8 @@
  </div>
 </div>
 
-    <a href="/designs/minProjects"><button class="top">TOP</button></a>
-    <a href="/minimalist"><button>View Furniture</button></a>
+    <a href="/designs/minProjects"><button class="top-bttn">TOP</button></a>
+   
 
   <!-- ============ FOOTER ============ -->
     <%- include ('./partials/footer.ejs') %>
