--- a/ID_Studio_2/views/minimalistStyle/index.ejs
+++ b/ID_Studio_2/views/minimalistStyle/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %> 
+  <a class="link-styles" href="/designs/minProjects">Back to Minimalist Design Style</a>
 
 <body>
-    <a id="link" href="/designs/minProjects">Back to Minimalist Design Style</a>
+
     
-    <h1>Minimalism Furniture</h1>
+    <h1 class="index-title">Minimalism Furniture</h1>
     
     <p class="prodInf"> 
         Although many minimalists focus on neutral tones and increasingly rely on white, a deliberate, temperate use of color is also possible.<br>
