--- a/ID_Studio_2/views/industrialStyle/show.ejs
+++ b/ID_Studio_2/views/industrialStyle/show.ejs
@@ -15,7 +15,7 @@
 <body>
 
   
-    <h1><%= industrial.title %></h1>
+    <h1 class="index-title"><%= industrial.title %></h1>
     <img src="<%= industrial.image%>"id="imgs5"><br>
     <div class="container5">  
     <div class="product-content">
