--- a/ID_Studio_2/views/mediterraneanStyle/new.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/new.ejs
@@ -9,7 +9,7 @@
     </style>
 
     <body>
-        <h1>Add New Furniture</h1>
+        <h1>Add New Product</h1>
         <form action="/mediterranean" method="POST">
 
             <h3 class="prodTitle"> Title: <input class="box" type="text" name="title" placeholder="i.e. Dining Table"/><br/></h3>
@@ -22,7 +22,7 @@
            <input class="add" type="submit" name="" value="Add new Product"/>
       </form>
    
-        <a class="link-ideas1" href="/mediterranean">Back to Decor Ideas</a>
+        <a class="link-ideas" href="/mediterranean">Back to Decor Ideas</a>
 
      
     </body>
