--- a/ID_Studio_2/views/minimalistStyle/show.ejs
+++ b/ID_Studio_2/views/minimalistStyle/show.ejs
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %> 
-<nav>
-    <a id="link" href="/minimalist">Back to Products</a>
+  <nav>
+  <a class="link-products" href="/minimalist">Back to Products</a>
 </nav>
 
+  <style type="text/css">
+    body {
+      background-color: #B86F52;
+    }
+    </style>
 
 
 <body>
-     
-<div class="container5" >   
-    <h1><%= minimalist.title %></h1>
+ 
+    <h1 class="index-title"><%= minimalist.title %></h1>
     <img src="<%= minimalist.image%>"id="imgs5"><br>
+    <div class="container5" >  
+    <div class="product-content">
     <h3 class="prodTitle">
     Store: <br>
     <h3 class="prodInfo"><%= minimalist.store %> <br></h3>
@@ -27,22 +33,25 @@
     <h3 class="prodTitle">
     Additional Notes: <br>
     <h3 class="prodInfo"><%= minimalist.notes %></h3><br> 
-    <a class="prodInfo" href="<%= minimalist.link%>" target="_blank">Visit the Store</a><br>
-
+    <a class="prodTitle" href="<%= minimalist.link%>" target="_blank">Visit the Store</a><br>
 </div>
+</div>
+
+<div class="buttons">
     <form action="/minimalist/<%=minimalist.id%>?_method=DELETE" method="POST">
-        <input type="submit" value="Delete" id="delete">
+        <input type="submit" value="Delete" class="deletebttn">
     </form> 
 
     <form action="/minimalist/<%=minimalist._id%>/edit">
-        <input type="submit" value="Edit" id="edit">
+        <input type="submit" value="Edit" class="editbttn">
      </form> 
+</div>
 
+<a class="link-style" href="/designs/minProjects">Back to Minimalist Design Style</a>
 
-    <a id="link1" href="/designs/minProjects">Back to Minimalist Design Style</a>
-    
  <!-- ============ FOOTER ============ -->
     <%- include ('../partials/footer.ejs') %>
+    
     
 </body>
 </html>
