--- a/ID_Studio_2/views/industrialStyle/index.ejs
+++ b/ID_Studio_2/views/industrialStyle/index.ejs
@@ -7,7 +7,7 @@
 
 <body>
     
-    <h1 class="index-title">Industrial Furniture</h1>
+    <h1 class="index-title">Industrial Style Furniture</h1>
     
     <p class="prodInf"> A trend born out of necessity in the 1960s that still thrives today.  <br>
         * Brick walls, pipes, and steel structures are left exposed to deliberately contribute to a dramatic effect. <br>
