--- a/ID_Studio_2/views/mediterraneanStyle/show.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/show.ejs
@@ -26,7 +26,7 @@
           <h3 class="prodInfo"> <%= mediterranean.description %> <br></h3>
           <h3 class="prodTitle">
           Price: <br></h3>
-          <h3 class="prodInfo"><%= mediterranean.price%> <br></h3>
+          <h3 class="prodInfo">$<%= mediterranean.price%> <br></h3>
           <h3 class="prodTitle">
           Tags: <br></h3>
           <h3 class="prodInfo"><%= mediterranean.tags %><br></h3>
