--- a/ID_Studio_2/views/minimalistStyle/edit.ejs
+++ b/ID_Studio_2/views/minimalistStyle/edit.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Edit Product</h1>
+    <h1>EDIT PRODUCT</h1>
 
     <div class="container6">
         <form action="/minimalist/<%= product.id %>?_method=PUT" method="POST">
