--- a/ID_Studio_2/views/minimalistStyle/index.ejs
+++ b/ID_Studio_2/views/minimalistStyle/index.ejs
@@ -6,7 +6,7 @@
 <body>
 
     
-    <h1 class="index-title">Minimalism Furniture</h1>
+    <h1 class="index-title">Minimalist Style Furniture</h1>
     
     <p class="prodInf"> 
         Although many minimalists focus on neutral tones and increasingly rely on white, a deliberate, temperate use of color is also possible.<br>
