--- a/ID_Studio_2/views/minimalistStyle/show.ejs
+++ b/ID_Studio_2/views/minimalistStyle/show.ejs
@@ -26,7 +26,7 @@
     <h3 class="prodInfo"><%= minimalist.description %> <br></h3>
     <h3 class="prodTitle">
     Price: <br>
-    <h3 class="prodInfo"><%= minimalist.price%> <br></h3>
+    <h3 class="prodInfo">$<%= minimalist.price%> <br></h3>
     <h3 class="prodTitle">
     Tags: <br>
     <h3 class="prodInfo"><%= minimalist.tags %><br></h3>
