--- a/ID_Studio_2/views/industrialStyle/edit.ejs
+++ b/ID_Studio_2/views/industrialStyle/edit.ejs
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Edit Product</h1>
+    <h1>EDIT PRODUCT</h1>
 
     <div class="container6">
         <form action="/industrial/<%= product.id %>?_method=PUT" method="POST">
