--- a/ID_Studio_2/views/industrialStyle/show.ejs
+++ b/ID_Studio_2/views/industrialStyle/show.ejs
@@ -27,7 +27,7 @@
       <h3 class="prodInfo"><%= industrial.description %> <br></h3>
       <h3 class="prodTitle">
       Price: <br>
-      <h3 class="prodInfo"><%= industrial.price%> <br></h3>
+      <h3 class="prodInfo">$<%= industrial.price%> <br></h3>
       <h3 class="prodTitle">
       Tags: <br>
       <h3 class="prodInfo"><%= industrial.tags %><br></h3>
