--- a/ID_Studio_2/views/mediterraneanStyle/index.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/index.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <a class="link-styles" href="/designs/mediProjects">Back to Mediterranean Style</a>
-    <h1 class="index-title">Mediterranean Furniture</h1>
+    <h1 class="index-title">Mediterranean Style Furniture</h1>
     
     <p  class="prodInf">Though not exhaustive, many Mediterranean-style homes will make use of the following design motifs: <br>
         * Textured walls, often stucco on the exterior with plaster walls or stone walls on the interior <br>
