--- a/ID_Studio_2/views/minimalistStyle/new.ejs
+++ b/ID_Studio_2/views/minimalistStyle/new.ejs
@@ -10,7 +10,7 @@
 
     <body>
       <div>
-        <h1>Add New Product</h1>
+        <h1 >ADD NEW PRODUCT</h1>
         <form action="/minimalist" method="POST">
 
           <h3 class="prodTitle">  Title: <input class="box" type="text" name="title" placeholder="i.e. Dining Table" /><br/></h3>
