--- a/ID_Studio_2/views/index1.ejs
+++ b/ID_Studio_2/views/index1.ejs
@@ -32,7 +32,7 @@
   </div>
 </div>
 
-    <a href="/designs/mediProjects"><button class="top-bttn">TOP</button></a>
+    <a href="/interiordesignstudio/mediProjects"><button class="top-bttn">TOP</button></a>
 
   <!-- ============ FOOTER ============ -->
   <%- include ('./partials/footer.ejs') %>
