--- a/ID_Studio_2/views/industrialStyle/show.ejs
+++ b/ID_Studio_2/views/industrialStyle/show.ejs
@@ -49,7 +49,7 @@
      </form> 
     </div>
   
-    <a class="link-style" href="/designs/inProjects">Back to Industrial Design Style</a>
+    <a class="link-style" href="/interiordesignstudio/inProjects">Back to Industrial Design Style</a>
 
  <!-- ============ FOOTER ============ -->
  <%- include ('../partials/footer.ejs') %>
