--- a/ID_Studio_2/views/mediterraneanStyle/show.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/show.ejs
@@ -47,7 +47,7 @@
     </form> 
   </div>
 
-  <a class="link-style" href="/designs/mediProjects">Back to Mediterranean Style</a>
+  <a class="link-style" href="/interiordesignstudio/mediProjects">Back to Mediterranean Style</a>
    <!-- ============ FOOTER ============ -->
    <%- include ('../partials/footer.ejs') %>
  
