--- a/ID_Studio_2/views/minimalistStyle/index.ejs
+++ b/ID_Studio_2/views/minimalistStyle/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %> 
-  <a class="link-styles" href="/designs/minProjects">Back to Minimalist Design Style</a>
+  <a class="link-styles" href="/interiordesignstudio/minProjects">Back to Minimalist Design Style</a>
 
 <body>
 
