--- a/ID_Studio_2/views/index3.ejs
+++ b/ID_Studio_2/views/index3.ejs
@@ -44,7 +44,7 @@
  </div>
 </div>
 
-    <a href="/designs/minProjects"><button class="top-bttn">TOP</button></a>
+    <a href="/interiordesignstudio/minProjects"><button class="top-bttn">TOP</button></a>
    
 
   <!-- ============ FOOTER ============ -->
